emit/parser/parser.output
State 156 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statements statement
    3           | %empty

    4 statement: expression SEMICOLON
    5          | ifstmt
    6          | whilestmt
    7          | forstmt
    8          | returnstmt
    9          | BREAK SEMICOLON
   10          | CONTINUE SEMICOLON
   11          | block
   12          | funcdef
   13          | SEMICOLON

   14 expression: assignexpr
   15           | expression PLUS expression
   16           | expression MINUS expression
   17           | expression MULT expression
   18           | expression DIV expression
   19           | expression MOD expression
   20           | expression GREATER_THAN expression
   21           | expression GREATER_OR_EQUAL expression
   22           | expression LESS_THAN expression
   23           | expression LESS_OR_EQUAL expression
   24           | expression EQUALS_EQUALS expression
   25           | expression NOT_EQUALS expression
   26           | expression AND expression
   27           | expression OR expression
   28           | term

   29 term: LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
   30     | UMINUS expression
   31     | NOT expression
   32     | PLUS_PLUS lvalue
   33     | lvalue PLUS_PLUS
   34     | MINUS_MINUS lvalue
   35     | lvalue MINUS_MINUS
   36     | primary

   37 $@1: %empty

   38 assignexpr: lvalue $@1 EQUALS expression

   39 primary: lvalue
   40        | call
   41        | objectdef
   42        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   43        | const

   44 lvalue: ID
   45       | LOCAL ID
   46       | DOUBLE_COLON ID
   47       | member

   48 member: lvalue DOT ID
   49       | lvalue LEFT_BRACE expression RIGHT_BRACE
   50       | call DOT ID
   51       | call LEFT_BRACE expression RIGHT_BRACE

   52 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   53     | lvalue callsuffix
   54     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   55 callsuffix: normcall
   56           | methodcall

   57 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   58 methodcall: DOUBLE_DOT ID LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   59 elist: expression
   60      | expression COMMA elist
   61      | %empty

   62 objectdef: LEFT_BRACE elist RIGHT_BRACE
   63          | LEFT_BRACE indexed RIGHT_BRACE

   64 indexed: indexedelem
   65        | indexedelem COMMA indexed

   66 indexedelem: LEFT_BRACKET expression COLON expression RIGHT_BRACKET

   67 block: blockstart blockend
   68      | blockstart blockstmt blockend

   69 blockstart: LEFT_BRACKET

   70 blockend: RIGHT_BRACKET

   71 blockstmt: statement
   72          | statement blockstmt

   73 $@2: %empty

   74 $@3: %empty

   75 funcdef: funcstart LEFT_PARENTHESIS $@2 idlist RIGHT_PARENTHESIS $@3 block

   76 funcstart: FUNCTION ID
   77          | FUNCTION

   78 const: NUM
   79      | STRING
   80      | NIL
   81      | TRUE
   82      | FALSE

   83 idlist: arg
   84       | arg COMMA idlist
   85       | %empty

   86 arg: ID

   87 ifstmt: ifstart expression RIGHT_PARENTHESIS statement
   88       | ifstart expression RIGHT_PARENTHESIS statement ELSE statement

   89 ifstart: IF LEFT_PARENTHESIS

   90 whilestmt: whilestart expression RIGHT_PARENTHESIS statement

   91 whilestart: WHILE LEFT_PARENTHESIS

   92 forstmt: forstart elist SEMICOLON expression SEMICOLON elist RIGHT_PARENTHESIS statement

   93 forstart: FOR LEFT_PARENTHESIS

   94 returnstmt: RETURN SEMICOLON
   95           | RETURN expression SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <numValue> (258) 78
    ID <strValue> (259) 44 45 46 48 50 58 76 86
    STRING <strValue> (260) 79
    IF <strValue> (261) 89
    ELSE <strValue> (262) 88
    WHILE <strValue> (263) 91
    FOR <strValue> (264) 93
    FUNCTION <strValue> (265) 76 77
    RETURN <strValue> (266) 94 95
    BREAK <strValue> (267) 9
    CONTINUE <strValue> (268) 10
    AND <strValue> (269) 26
    NOT <strValue> (270) 31
    OR <strValue> (271) 27
    LOCAL <strValue> (272) 45
    TRUE <strValue> (273) 81
    FALSE <strValue> (274) 82
    NIL <strValue> (275) 80
    LEFT_BRACE <strValue> (276) 49 51 62 63
    RIGHT_BRACE <strValue> (277) 49 51 62 63
    LEFT_BRACKET <strValue> (278) 66 69
    RIGHT_BRACKET <strValue> (279) 66 70
    LEFT_PARENTHESIS <strValue> (280) 29 42 52 54 57 58 75 89 91 93
    RIGHT_PARENTHESIS <strValue> (281) 29 42 52 54 57 58 75 87 88 90 92
    SEMICOLON <strValue> (282) 4 9 10 13 92 94 95
    COMMA <strValue> (283) 60 65 84
    COLON <strValue> (284) 66
    DOUBLE_COLON <strValue> (285) 46
    DOT <strValue> (286) 48 50
    DOUBLE_DOT <strValue> (287) 58
    EQUALS <strValue> (288) 38
    PLUS <strValue> (289) 15
    MINUS <strValue> (290) 16
    MULT <strValue> (291) 17
    DIV <strValue> (292) 18
    MOD <strValue> (293) 19
    EQUALS_EQUALS <strValue> (294) 24
    NOT_EQUALS <strValue> (295) 25
    PLUS_PLUS <strValue> (296) 32 33
    MINUS_MINUS <strValue> (297) 34 35
    GREATER_THAN <strValue> (298) 20
    LESS_THAN <strValue> (299) 22
    GREATER_OR_EQUAL <strValue> (300) 21
    LESS_OR_EQUAL <strValue> (301) 23
    UMINUS <strValue> (302) 30


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program (49)
        on left: 1
        on right: 0
    statements (50)
        on left: 2 3
        on right: 1 2
    statement (51)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 71 72 87 88 90 92
    expression <exprValue> (52)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 4 15 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 38 49 51 59 60 66 87 88 90 92 95
    term <exprValue> (53)
        on left: 29 30 31 32 33 34 35 36
        on right: 28
    assignexpr <exprValue> (54)
        on left: 38
        on right: 14
    $@1 (55)
        on left: 37
        on right: 38
    primary <exprValue> (56)
        on left: 39 40 41 42 43
        on right: 36
    lvalue <exprValue> (57)
        on left: 44 45 46 47
        on right: 32 33 34 35 38 39 48 49 53
    member <strValue> (58)
        on left: 48 49 50 51
        on right: 47
    call <exprValue> (59)
        on left: 52 53 54
        on right: 40 50 51 52
    callsuffix <functionCall> (60)
        on left: 55 56
        on right: 53
    normcall <functionCall> (61)
        on left: 57
        on right: 55
    methodcall <functionCall> (62)
        on left: 58
        on right: 56
    elist <exprValue> (63)
        on left: 59 60 61
        on right: 52 54 57 58 60 62 92
    objectdef (64)
        on left: 62 63
        on right: 41
    indexed (65)
        on left: 64 65
        on right: 63 65
    indexedelem (66)
        on left: 66
        on right: 64 65
    block (67)
        on left: 67 68
        on right: 11 75
    blockstart (68)
        on left: 69
        on right: 67 68
    blockend (69)
        on left: 70
        on right: 67 68
    blockstmt (70)
        on left: 71 72
        on right: 68 72
    funcdef <exprValue> (71)
        on left: 75
        on right: 12 42 54
    $@2 (72)
        on left: 73
        on right: 75
    $@3 (73)
        on left: 74
        on right: 75
    funcstart <exprValue> (74)
        on left: 76 77
        on right: 75
    const <exprValue> (75)
        on left: 78 79 80 81 82
        on right: 43
    idlist <strValue> (76)
        on left: 83 84 85
        on right: 75 84
    arg <strValue> (77)
        on left: 86
        on right: 83 84
    ifstmt (78)
        on left: 87 88
        on right: 5
    ifstart (79)
        on left: 89
        on right: 87 88
    whilestmt (80)
        on left: 90
        on right: 6
    whilestart (81)
        on left: 91
        on right: 90
    forstmt (82)
        on left: 92
        on right: 7
    forstart (83)
        on left: 93
        on right: 92
    returnstmt (84)
        on left: 94 95
        on right: 8


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (statements)

    program     go to state 1
    statements  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: statements .
    2 statements: statements . statement

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    IF                shift, and go to state 7
    WHILE             shift, and go to state 8
    FOR               shift, and go to state 9
    FUNCTION          shift, and go to state 10
    RETURN            shift, and go to state 11
    BREAK             shift, and go to state 12
    CONTINUE          shift, and go to state 13
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_BRACKET      shift, and go to state 20
    LEFT_PARENTHESIS  shift, and go to state 21
    SEMICOLON         shift, and go to state 22
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    $default  reduce using rule 1 (program)

    statement   go to state 27
    expression  go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    blockstart  go to state 37
    funcdef     go to state 38
    funcstart   go to state 39
    const       go to state 40
    ifstmt      go to state 41
    ifstart     go to state 42
    whilestmt   go to state 43
    whilestart  go to state 44
    forstmt     go to state 45
    forstart    go to state 46
    returnstmt  go to state 47


State 3

    0 $accept: program $end .

    $default  accept


State 4

   78 const: NUM .

    $default  reduce using rule 78 (const)


State 5

   44 lvalue: ID .

    $default  reduce using rule 44 (lvalue)


State 6

   79 const: STRING .

    $default  reduce using rule 79 (const)


State 7

   89 ifstart: IF . LEFT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 48


State 8

   91 whilestart: WHILE . LEFT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 49


State 9

   93 forstart: FOR . LEFT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 50


State 10

   76 funcstart: FUNCTION . ID
   77          | FUNCTION .

    ID  shift, and go to state 51

    $default  reduce using rule 77 (funcstart)


State 11

   94 returnstmt: RETURN . SEMICOLON
   95           | RETURN . expression SEMICOLON

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 21
    SEMICOLON         shift, and go to state 52
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    expression  go to state 53
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 40


State 12

    9 statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 13

   10 statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 55


State 14

   31 term: NOT . expression

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    expression  go to state 56
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 40


State 15

   45 lvalue: LOCAL . ID

    ID  shift, and go to state 57


State 16

   81 const: TRUE .

    $default  reduce using rule 81 (const)


State 17

   82 const: FALSE .

    $default  reduce using rule 82 (const)


State 18

   80 const: NIL .

    $default  reduce using rule 80 (const)


State 19

   62 objectdef: LEFT_BRACE . elist RIGHT_BRACE
   63          | LEFT_BRACE . indexed RIGHT_BRACE

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_BRACKET      shift, and go to state 58
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    $default  reduce using rule 61 (elist)

    expression   go to state 59
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 60
    objectdef    go to state 35
    indexed      go to state 61
    indexedelem  go to state 62
    const        go to state 40


State 20

   69 blockstart: LEFT_BRACKET .

    $default  reduce using rule 69 (blockstart)


State 21

   29 term: LEFT_PARENTHESIS . expression RIGHT_PARENTHESIS
   42 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   54 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    FUNCTION          shift, and go to state 10
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    expression  go to state 63
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 64
    funcstart   go to state 39
    const       go to state 40


State 22

   13 statement: SEMICOLON .

    $default  reduce using rule 13 (statement)


State 23

   46 lvalue: DOUBLE_COLON . ID

    ID  shift, and go to state 65


State 24

   32 term: PLUS_PLUS . lvalue

    ID                shift, and go to state 5
    LOCAL             shift, and go to state 15
    LEFT_PARENTHESIS  shift, and go to state 66
    DOUBLE_COLON      shift, and go to state 23

    lvalue  go to state 67
    member  go to state 33
    call    go to state 68


State 25

   34 term: MINUS_MINUS . lvalue

    ID                shift, and go to state 5
    LOCAL             shift, and go to state 15
    LEFT_PARENTHESIS  shift, and go to state 66
    DOUBLE_COLON      shift, and go to state 23

    lvalue  go to state 69
    member  go to state 33
    call    go to state 68


State 26

   30 term: UMINUS . expression

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    expression  go to state 70
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 40


State 27

    2 statements: statements statement .

    $default  reduce using rule 2 (statements)


State 28

    4 statement: expression . SEMICOLON
   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULT expression
   18           | expression . DIV expression
   19           | expression . MOD expression
   20           | expression . GREATER_THAN expression
   21           | expression . GREATER_OR_EQUAL expression
   22           | expression . LESS_THAN expression
   23           | expression . LESS_OR_EQUAL expression
   24           | expression . EQUALS_EQUALS expression
   25           | expression . NOT_EQUALS expression
   26           | expression . AND expression
   27           | expression . OR expression

    AND               shift, and go to state 71
    OR                shift, and go to state 72
    SEMICOLON         shift, and go to state 73
    PLUS              shift, and go to state 74
    MINUS             shift, and go to state 75
    MULT              shift, and go to state 76
    DIV               shift, and go to state 77
    MOD               shift, and go to state 78
    EQUALS_EQUALS     shift, and go to state 79
    NOT_EQUALS        shift, and go to state 80
    GREATER_THAN      shift, and go to state 81
    LESS_THAN         shift, and go to state 82
    GREATER_OR_EQUAL  shift, and go to state 83
    LESS_OR_EQUAL     shift, and go to state 84


State 29

   28 expression: term .

    $default  reduce using rule 28 (expression)


State 30

   14 expression: assignexpr .

    $default  reduce using rule 14 (expression)


State 31

   36 term: primary .

    $default  reduce using rule 36 (term)


State 32

   33 term: lvalue . PLUS_PLUS
   35     | lvalue . MINUS_MINUS
   38 assignexpr: lvalue . $@1 EQUALS expression
   39 primary: lvalue .
   48 member: lvalue . DOT ID
   49       | lvalue . LEFT_BRACE expression RIGHT_BRACE
   53 call: lvalue . callsuffix

    LEFT_BRACE        shift, and go to state 85
    LEFT_PARENTHESIS  shift, and go to state 86
    DOT               shift, and go to state 87
    DOUBLE_DOT        shift, and go to state 88
    PLUS_PLUS         shift, and go to state 89
    MINUS_MINUS       shift, and go to state 90

    EQUALS    reduce using rule 37 ($@1)
    $default  reduce using rule 39 (primary)

    $@1         go to state 91
    callsuffix  go to state 92
    normcall    go to state 93
    methodcall  go to state 94


State 33

   47 lvalue: member .

    $default  reduce using rule 47 (lvalue)


State 34

   40 primary: call .
   50 member: call . DOT ID
   51       | call . LEFT_BRACE expression RIGHT_BRACE
   52 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACE        shift, and go to state 95
    LEFT_PARENTHESIS  shift, and go to state 96
    DOT               shift, and go to state 97

    $default  reduce using rule 40 (primary)


State 35

   41 primary: objectdef .

    $default  reduce using rule 41 (primary)


State 36

   11 statement: block .

    $default  reduce using rule 11 (statement)


State 37

   67 block: blockstart . blockend
   68      | blockstart . blockstmt blockend

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    IF                shift, and go to state 7
    WHILE             shift, and go to state 8
    FOR               shift, and go to state 9
    FUNCTION          shift, and go to state 10
    RETURN            shift, and go to state 11
    BREAK             shift, and go to state 12
    CONTINUE          shift, and go to state 13
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_BRACKET      shift, and go to state 20
    RIGHT_BRACKET     shift, and go to state 98
    LEFT_PARENTHESIS  shift, and go to state 21
    SEMICOLON         shift, and go to state 22
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    statement   go to state 99
    expression  go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    blockstart  go to state 37
    blockend    go to state 100
    blockstmt   go to state 101
    funcdef     go to state 38
    funcstart   go to state 39
    const       go to state 40
    ifstmt      go to state 41
    ifstart     go to state 42
    whilestmt   go to state 43
    whilestart  go to state 44
    forstmt     go to state 45
    forstart    go to state 46
    returnstmt  go to state 47


State 38

   12 statement: funcdef .

    $default  reduce using rule 12 (statement)


State 39

   75 funcdef: funcstart . LEFT_PARENTHESIS $@2 idlist RIGHT_PARENTHESIS $@3 block

    LEFT_PARENTHESIS  shift, and go to state 102


State 40

   43 primary: const .

    $default  reduce using rule 43 (primary)


State 41

    5 statement: ifstmt .

    $default  reduce using rule 5 (statement)


State 42

   87 ifstmt: ifstart . expression RIGHT_PARENTHESIS statement
   88       | ifstart . expression RIGHT_PARENTHESIS statement ELSE statement

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    expression  go to state 103
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 40


State 43

    6 statement: whilestmt .

    $default  reduce using rule 6 (statement)


State 44

   90 whilestmt: whilestart . expression RIGHT_PARENTHESIS statement

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    expression  go to state 104
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 40


State 45

    7 statement: forstmt .

    $default  reduce using rule 7 (statement)


State 46

   92 forstmt: forstart . elist SEMICOLON expression SEMICOLON elist RIGHT_PARENTHESIS statement

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    $default  reduce using rule 61 (elist)

    expression  go to state 59
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    elist       go to state 105
    objectdef   go to state 35
    const       go to state 40


State 47

    8 statement: returnstmt .

    $default  reduce using rule 8 (statement)


State 48

   89 ifstart: IF LEFT_PARENTHESIS .

    $default  reduce using rule 89 (ifstart)


State 49

   91 whilestart: WHILE LEFT_PARENTHESIS .

    $default  reduce using rule 91 (whilestart)


State 50

   93 forstart: FOR LEFT_PARENTHESIS .

    $default  reduce using rule 93 (forstart)


State 51

   76 funcstart: FUNCTION ID .

    $default  reduce using rule 76 (funcstart)


State 52

   94 returnstmt: RETURN SEMICOLON .

    $default  reduce using rule 94 (returnstmt)


State 53

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULT expression
   18           | expression . DIV expression
   19           | expression . MOD expression
   20           | expression . GREATER_THAN expression
   21           | expression . GREATER_OR_EQUAL expression
   22           | expression . LESS_THAN expression
   23           | expression . LESS_OR_EQUAL expression
   24           | expression . EQUALS_EQUALS expression
   25           | expression . NOT_EQUALS expression
   26           | expression . AND expression
   27           | expression . OR expression
   95 returnstmt: RETURN expression . SEMICOLON

    AND               shift, and go to state 71
    OR                shift, and go to state 72
    SEMICOLON         shift, and go to state 106
    PLUS              shift, and go to state 74
    MINUS             shift, and go to state 75
    MULT              shift, and go to state 76
    DIV               shift, and go to state 77
    MOD               shift, and go to state 78
    EQUALS_EQUALS     shift, and go to state 79
    NOT_EQUALS        shift, and go to state 80
    GREATER_THAN      shift, and go to state 81
    LESS_THAN         shift, and go to state 82
    GREATER_OR_EQUAL  shift, and go to state 83
    LESS_OR_EQUAL     shift, and go to state 84


State 54

    9 statement: BREAK SEMICOLON .

    $default  reduce using rule 9 (statement)


State 55

   10 statement: CONTINUE SEMICOLON .

    $default  reduce using rule 10 (statement)


State 56

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULT expression
   18           | expression . DIV expression
   19           | expression . MOD expression
   20           | expression . GREATER_THAN expression
   21           | expression . GREATER_OR_EQUAL expression
   22           | expression . LESS_THAN expression
   23           | expression . LESS_OR_EQUAL expression
   24           | expression . EQUALS_EQUALS expression
   25           | expression . NOT_EQUALS expression
   26           | expression . AND expression
   27           | expression . OR expression
   31 term: NOT expression .

    $default  reduce using rule 31 (term)


State 57

   45 lvalue: LOCAL ID .

    $default  reduce using rule 45 (lvalue)


State 58

   66 indexedelem: LEFT_BRACKET . expression COLON expression RIGHT_BRACKET

    NUM               shift, and go to state 4
    ID                shift, and go to state 5
    STRING            shift, and go to state 6
    NOT               shift, and go to state 14
    LOCAL             shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    NIL               shift, and go to state 18
    LEFT_BRACE        shift, and go to state 19
    LEFT_PARENTHESIS  shift, and go to state 21
    DOUBLE_COLON      shift, and go to state 23
    PLUS_PLUS         shift, and go to state 24
    MINUS_MINUS       shift, and go to state 25
    UMINUS            shift, and go to state 26

    expression  go to state 107
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 40


State 59

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULT expression
   18           | expression . DIV expression
   19           | expression . MOD expression
   20           | expression . GREATER_THAN expression
   21           | expression . GREATER_OR_EQUAL expression
   22           | expression . LESS_THAN expression
   23           | expression . LESS_OR_EQUAL expression
   24           | expression . EQUALS_EQUALS expression
   25           | expression . NOT_EQUALS expression
   26           | expression . AND expression
   27           | expression . OR expression
   59 elist: expression .
   60      | expression . COMMA elist

    AND               shift, and go to state 71
    OR                shift, and go to state 72
    COMMA             shift, and go to state 108
    PLUS              shift, and go to state 74
    MINUS             shift, and go to state 75
    MULT              shift, and go to state 76
    DIV               shift, and go to state 77
    MOD               shift, and go to state 78
    EQUALS_EQUALS     shift, and go to state 79
    NOT_EQUALS        shift, and go to state 80
    GREATER_THAN      shift, and go to state 81
    LESS_THAN         shift, and go to state 82
    GREATER_OR_EQUAL  shift, and go to state 83
    LESS_OR_EQUAL     shift, and go to state 84

    $default  reduce using rule 59 (elist)


State 60

   62 objectdef: LEFT_BRACE elist . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 109


State 61

   63 objectdef: LEFT_BRACE indexed . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 110


State 62

   64 indexed: indexedelem .
   65        | indexedelem . COMMA indexed

    COMMA  shift, and go to state 111

    $default  reduce using rule 64 (indexed)


State 63

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULT expression
   18           | expression . DIV expression
   19           | expression . MOD expression
   20           | expression . GREATER_THAN expression
   21           | expression . GREATER_OR_EQUAL expression
   22           | expression . LESS_THAN expression
   23           | expression . LESS_OR_EQUAL expression
   24           | expression . EQUALS_EQUALS expression
   25           | expression . NOT_EQUALS expression
   26           | expression . AND expression
   27           | expression . OR expression
   29 term: LEFT_PARENTHESIS expression . RIGHT_PARENTHESIS

    AND                shift, and go to state 71
    OR                 shift, and go to state 72
    RIGHT_PARENTHESIS  shift, and go to state 112
    PLUS               shift, and go to state 74
    MINUS              shift, and go to state 75
    MULT               shift, and go to state 76
    DIV                shift, and go to state 77
    MOD                shift, and go to state 78
    EQUALS_EQUALS      shift, and go to state 79
    NOT_EQUALS         shift, and go to state 80
    GREATER_THAN       shift, and go to state 81
    LESS_THAN          shift, and go to state 82
    GREATER_OR_EQUAL   shift, and go to state 83
    LESS_OR_EQUAL      shift, and go to state 84


State 64

   42 primary: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS
   54 call: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 113


State 65

   46 lvalue: DOUBLE_COLON ID .

    $default  reduce using rule 46 (lvalue)


State 66

   54 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    FUNCTION  shift, and go to state 10

    funcdef    go to state 114
    funcstart  go to state 39


State 67

   32 term: PLUS_PLUS lvalue .
   48 member: lvalue . DOT ID
   49       | lvalue . LEFT_BRACE expression RIGHT_BRACE
   53 call: lvalue . callsuffix

    LEFT_BRACE        shift, and go to state 85
    LEFT_PARENTHESIS  shift, and go to state 86
    DOT               shift, and go to state 87
    DOUBLE_DOT        shift, and go to state 88

    $default  reduce using rule 32 (term)

    callsuffix  go to state 92
    normcall    go to state 93
    methodcall  go to state 94


State 68

   50 member: call . DOT ID
   51       | call . LEFT_BRACE expression RIGHT_BRACE
   52 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACE        shift, and go to state 95
    LEFT_PARENTHESIS  shift, and go to state 96
    DOT               shift, and go to state 97


State 69

   34 term: MINUS_MINUS lvalue .
   48 member: lvalue . DOT ID
   49       | lvalue . LEFT_BRACE expression RIGHT_BRACE
   53 call: lvalue . callsuffix

    LEFT_BRACE        shift, and go to state 85
    LEFT_PARENTHESIS  shift, and go to state 86
    DOT               shift, and go to state 87
    DOUBLE_DOT        shift, and go to state 88

    $default  reduce using rule 34 (term)

    callsuffix  go to state 92
    normcall    go to state 93
    methodcall  go to state 94


State 70

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULT expression
   18           | expression . DIV expression
   19           | expression . MOD expression
   20           | expression . GREATER_THAN expression
   21           | expression . GREATER_OR_EQUAL expression
   22           | expression . LESS_THAN expression
   23           | expression . LESS_OR_EQUAL expression
   24           | expression . EQUALS_EQUALS expression
   25           | expression . NOT_EQUALS expression
   26           | expression . AND expression
   27           | expression . OR expression
   30 term: UMINUS expression .

    $default  reduce using rule 30 (term)


State 71

   26 expression: expression AND . expression
